# road_segmentation_plugin

./: CMakeLists.txt  package.xml  plugins.xml
include/road_segmentation_plugin/: nn_wrapper_road_segmentation.hpp  road_segmentation.hpp  road_segmentation_plugin.hpp
models/: enet.json  enet.json.in  enet_old.json.in
src/: nn_wrapper_road_segmentation.cpp  road_segmentation.cpp  road_segmentation_plugin.cpp
