<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
SPDX-License-Identifier: BSD-3-Clause
SPDX-FileCopyrightText: Czech Technical University in Prague
-->
<package format="3">
  <name>road_segmentation_plugin</name>
  <version>1.0.0</version>
  <description>Luxonis OAK-D pipeline for running 3-class segmentation on the cameras.</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <author email="herolada@fel.cvut.cz">Adam Herold</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>
  
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>depthai</build_depend>
  <build_depend>depthai_bridge</build_depend>
  <build_depend>depthai_ros_driver</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>depthai</exec_depend>
  <exec_depend>depthai_bridge</exec_depend>
  <exec_depend>depthai_ros_driver</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>cras_lint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
